<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="productDetailModel"
            type="com.manday.marvel.ui.models.ProductDetailModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.45"
            android:orientation="horizontal"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/barLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorTransparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/text_product_detail"
                app:navigationIcon="@drawable/ic_arrow_back_24dp"
                style="@style/Toolbar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProduct"
            android:layout_width="250dp"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/barLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp"
            android:src="@mipmap/placeholder_plain" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDiscount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp"
            android:visibility="@{productDetailModel.showImageDiscount, default=gone}"
            android:src="@mipmap/discount_preview" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProduct"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.65"
                android:orientation="vertical"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:helperTextEnabled="true"
                android:hint="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLigthGrey2"
                    android:text="@{productDetailModel.name}"
                    android:textSize="16sp"
                    android:textIsSelectable="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    tools:layout="Nombre del producto"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:helperTextEnabled="true"
                android:hint="@string/brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLigthGrey2"
                    android:text="@{productDetailModel.brand}"
                    android:textSize="16sp"
                    android:textIsSelectable="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    tools:layout="Nombre del producto"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorRed"
                app:helperTextEnabled="true"
                android:hint="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBrand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLigthGrey2"
                    android:text="@{productDetailModel.description}"
                    android:textSize="16sp"
                    android:textIsSelectable="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    tools:layout="Nombre del producto"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tvDescription"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintBottom_toBottomOf="@id/mbAdd"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="@{productDetailModel.price}"
                tools:text="122 €"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCurrencyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvPrice"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintBottom_toBottomOf="@id/mbAdd"
                android:layout_marginStart="1dp"
                android:textSize="18sp"
                android:text="@{productDetailModel.currency}"
                tools:text="122 €"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFinalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvCurrencyPrice"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintBottom_toBottomOf="@id/mbAdd"
                android:layout_marginStart="16dp"
                android:text="@{productDetailModel.discountPrice}"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="122 €"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCurrencyFinalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvFinalPrice"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintBottom_toBottomOf="@id/mbAdd"
                android:layout_marginStart="1dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="@{productDetailModel.currency}"
                tools:text="122 €"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toEndOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:text="@string/text_add_to_basket"
                android:textColor="@color/colorAccent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--
        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:progress="0"
            android:visibility="gone"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMain" />
        -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>